src/test/run-pass/empty-allocation-rvalue-non-null.rs
#![allow(unused_variables)]
// pretty-expanded FIXME #23616

pub fn main() {
    let x = *Box::new(());
}
